[tool.poetry]
name = "password-manager-api"
version = "0.1.0"
description = "Simple password manager"
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "password_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.1"
httpx = "^0.23.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.9.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
